# Honors_project-CSC211H

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  Student.cpp  Student.h  StudentManager.cpp  StudentManager.h  students.txt  tap_income.txt
